[gd_scene load_steps=2 format=3 uid="uid://bc1tb3p5q52up"]

[ext_resource type="Script" path="res://scripts/ui/ability_card.gd" id="1_6j2ky"]

[node name="AbilityCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6j2ky")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AbilityIcon" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2

[node name="AbiltyName" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="AbilityDescription" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="AbilityStatus" type="Label" parent="VBoxContainer"]
layout_mode = 2
